templates/fdi-dotstatsuite-tenants-vs_template.yaml
---
# Source: fdi-dotstatsuite-tenants-vs/templates/vs/tenant.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: fdi--tenant-vs
spec:
  gateways:
    - ingress-general-system/general-istio-ingress-gateway-https
  hosts:
    - 
  http:
    - match:
        - uri:
            prefix: /
      rewrite:
        uri: /
      route:
        - destination:
            host: 
            port:
              number: 80
          headers:
            request:
              set:
                x-tenant:
